# rhubarb-lip-sync

./: .appveyor.yml  .clang-format  .editorconfig  .gersemirc  .gitattributes  .gitignore  .prettierrc.yml  .ruff.toml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.adoc  README.md  VERSION.md  app-info.toml  appInfo.cmake  build.gradle.kts  dodo.py  package-osx.sh  package-win.bat  package.json  requirements.txt  resharper.DotSettings  settings.gradle.kts  tools.cmake  ~deno.json
extras/EsotericSoftwareSpine/: .gitignore  CMakeLists.txt  README.adoc  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
extras/EsotericSoftwareSpine/demo/: matt.spine
lib/sphinxbase-5prealpha-2015-08-05/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  sphinxbase.pc.in  sphinxbase.sln
lib/sphinxbase-5prealpha-2015-08-05/doc/: Makefile.am  Makefile.in  doxyfile.in  sphinx_lm_convert.1
lib/sphinxbase-5prealpha-2015-08-05/include/: Makefile.am  Makefile.in  config.h.in  sphinx_config.h
lib/sphinxbase-5prealpha-2015-08-05/src/: Makefile.in
lib/sphinxbase-5prealpha-2015-08-05/swig/: Makefile.am  Makefile.in  cmd_ln.i  fsg_model.i  iterators.i  jsgf.i  logmath.i  ngram_model.i  sphinxbase.i  typemaps.i
lib/sphinxbase-5prealpha-2015-08-05/test/: Makefile.in
lib/webrtc-8d2248ff/: .gitignore  .gn  BUILD.gn  DEPS  WATCHLISTS  setup_links.py  sync_chromium.py
lib/webrtc-8d2248ff/webrtc/: BUILD.gn  audio_receive_stream.h  audio_send_stream.h  call.h  common.gyp  rtc_unittests_apk.isolate  webrtc.gyp  webrtc_examples.gyp  webrtc_nonparallel_tests_apk.isolate  webrtc_perf_tests_apk.isolate
rhubarb/: CMakeLists.txt  CMakePresets.json  Cargo.toml  build.gradle.kts  resharper.DotSettings
rhubarb/lib/: flite.patch  ogg.patch  utf8proc.patch
rhubarb/lib/flite-1.4/: ACKNOWLEDGEMENTS  COPYING  Makefile  config.sub  configure.in  flite.sln  mkinstalldirs
rhubarb/lib/ogg-1.3.3/: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  autogen.sh  releases.sha2
rhubarb/lib/opusfile-0.12/: aclocal.m4
rhubarb/lib/soundchange/: LICENSE.md  english.sc
rhubarb/lib/sphinx_config/: sphinx_config.h
rhubarb/lib/sphinxbase-rev13216/: Makefile.am  configure.ac  sphinxbase.pc.in  sphinxbase.sln
rhubarb/lib/utf8proc-2.2.0/: .gitignore  CMakeLists.txt  LICENSE.md  MANIFEST  Makefile  NEWS.md  README.md
rhubarb/lib/utf8proc-2a2f97e1/: utf8proc.h
rhubarb/lib/webrtc-8d2248ff/: AUTHORS  COPYING  LICENSE_THIRD_PARTY  PRESUBMIT.py  all.gyp
rhubarb/lib/whereami/: .gitattributes
rhubarb/rhubarb-audio/: Cargo.toml  build.gradle.kts  build.rs
rhubarb/rhubarb-audio/src/: audio_clip.rs  audio_error.rs  audio_filters.rs  lib.rs  memory_audio_clip.rs  open_audio_file.rs  read_and_seek.rs  sample_reader_assertions.rs  segment.rs
rhubarb/rhubarb-audio/tests/: open_audio_file_test.rs
rhubarb/src/animation/: ShapeRule.cpp  ShapeRule.h  animation-rules.cpp  animation-rules.h  animationRules.cpp  animationRules.h  mouth-animation.cpp  mouth-animation.h  mouthAnimation.cpp  mouthAnimation.h  pause-animation.cpp  pause-animation.h  pauseAnimation.cpp  rough-animation.cpp  rough-animation.h  roughAnimation.cpp  roughAnimation.h  shape-rule.cpp  shape-rule.h  shape-shorthands.h  static-segments.cpp  static-segments.h  staticSegments.cpp  staticSegments.h  target-shape-set.cpp  target-shape-set.h  targetShapeSet.cpp  targetShapeSet.h  timing-optimization.cpp  timing-optimization.h  timingOptimization.cpp  timingOptimization.h  tweening.cpp  tweening.h
rhubarb/src/audio/: AudioClip.cpp  AudioClip.h  AudioSegment.cpp  AudioSegment.h  DcOffset.cpp  DcOffset.h  OggOpusFileReader.cpp  OggOpusFileReader.h  OggVorbisFileReader.cpp  OggVorbisFileReader.h  SampleRateConverter.cpp  SampleRateConverter.h  WaveFileReader.cpp  WaveFileReader.h  audio-clip.cpp  audio-clip.h  audio-file-reading.cpp  audio-file-reading.h  audio-segment.cpp  audio-segment.h  audioFileReading.cpp  audioFileReading.h  dc-offset.cpp  dc-offset.h  io-tools.h  ioTools.h  ogg-vorbis-file-reader.cpp  ogg-vorbis-file-reader.h  processing.cpp  processing.h  sample-rate-converter.cpp  sample-rate-converter.h  voice-activity-detection.cpp  voice-activity-detection.h  voiceActivityDetection.cpp  voiceActivityDetection.h  wave-file-reader.cpp  wave-file-reader.h  wave-file-writing.cpp  wave-file-writing.h  (+2 more)
rhubarb/src/core/: Phone.cpp  Phone.h  Shape.cpp  Shape.h  app-info.cpp.in  phone.cpp  phone.h  shape.cpp  shape.h
rhubarb/src/exporters/: DatExporter.cpp  DatExporter.h  Exporter.h  JsonExporter.cpp  JsonExporter.h  TsvExporter.cpp  TsvExporter.h  XmlExporter.cpp  XmlExporter.h  dat-exporter.cpp  dat-exporter.h  exporter-tools.cpp  exporter-tools.h  exporter.h  exporterTools.cpp  exporterTools.h  json-exporter.cpp  json-exporter.h  tsv-exporter.cpp  tsv-exporter.h  xml-exporter.cpp  xml-exporter.h
rhubarb/src/lib/: rhubarb-lib.cpp  rhubarb-lib.h  rhubarbLib.cpp  rhubarbLib.h
rhubarb/src/logging/: Entry.cpp  Entry.h  Formatter.h  Level.cpp  Level.h  Sink.h  entry.cpp  entry.h  formatter.h  formatters.cpp  formatters.h  level.cpp  level.h  logging.cpp  logging.h  sink.h  sinks.cpp  sinks.h
rhubarb/src/recognition/: PhoneticRecognizer.cpp  PhoneticRecognizer.h  PocketSphinxRecognizer.cpp  PocketSphinxRecognizer.h  Recognizer.h  g2p-rules.cpp  g2p-rules.rb  g2p.cpp  g2p.h  g2pRules.cpp  g2pRules.rb  language-models.cpp  language-models.h  languageModels.cpp  languageModels.h  phoneRecognition.cpp  phoneRecognition.h  phonetic-recognizer.cpp  phonetic-recognizer.h  pocket-sphinx-recognizer.cpp  pocket-sphinx-recognizer.h  pocket-sphinx-tools.cpp  pocket-sphinx-tools.h  pocketSphinxTools.cpp  (+4 more)
rhubarb/tests/: BoundedTimelineTests.cpp  ContinuousTimelineTests.cpp  LazyTests.cpp  TimelineTests.cpp  WaveFileReaderTests.cpp  bounded-timeline-tests.cpp  continuous-timeline-tests.cpp  g2p-tests.cpp  g2pTests.cpp  lazy-tests.cpp  pairsTests.cpp  string-tools-tests.cpp  stringToolsTests.cpp  timeline-tests.cpp  tokenization-tests.cpp  tokenizationTests.cpp  wave-file-reader-tests.cpp
(+1635 files in other folders)
